# ceilingclaudecode

./: .gitignore  ARCHITECTURE.md  README.md  STATUS.md  pyproject.toml
debug/: README.md  __init__.py  algos.py  data.py  experiments.py  output.py  scoring.py  segment_lab.py  snapshot_truth.py
debug/ground_truth/: cc367350d007.json
docs/: polycam_coordinate_system.md
src/ceiling_rcp/: __init__.py  analyse.py  cli.py  init_session.py  mesh.py  planes.py  polygons.py  raster.py  server.py
src/ceiling_rcp/static/: app.js  index.html  style.css
